fix: user address edit/add, password error message, and tasker public profile view